--- a/listalk/components/form/formInput.module.css
+++ b/listalk/components/form/formInput.module.css
@@ -1,3 +1,9 @@
+.inputContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
 .inputStyle{
     min-width: 100%;
     border-radius: 0.3rem;
@@ -7,4 +13,6 @@
 
 .labelStyle{
     display: block;
+    font-family: "Inter", sans-serif;
+    color: #586166;
 }
